--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -39,6 +39,7 @@
      <Compile Include="Assets\Scripts\CollisionHandler.cs" />
      <Compile Include="Assets\Scripts\Movement.cs" />
      <Compile Include="Assets\Scripts\Oscilator.cs" />
+     <Compile Include="Assets\Scripts\QuitApplication.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2021.1.5f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
